Fixed inline form input text color, section spacing, & auto-adjusting headings

--- a/src/stories/Molecules/HeaderSearch/HeaderSearch.css
+++ b/src/stories/Molecules/HeaderSearch/HeaderSearch.css
@@ -120,6 +120,10 @@
   color: var(--color-black) !important;
 }
 
+.header-search .header-search__form input::placeholder {
+  color: var(--color-base);
+}
+
 .header-search .header-search__form input:focus {
   outline: var(--accent-color);
   border: 2px solid var(--accent-color);
